added some comments

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="home.css">
-<title>Instagram</title>
+<title>Instagram</title><!--title-->
 <link rel="icon" type="image" href="icons/instagram.png">
 </head>
 <body>
+    <!-- left section with icons starts here-->
 <section class="leftsec">
 <div class="left">
 <div class="insta" style="padding-left: 40px;"><img src="insta.png" class="instaimg" ></div>
@@ -46,7 +47,7 @@
 </div>
 </section>
 
-
+    <!--body top bar with status updates which comes as only profile pics-->
     <section class="bodyimg">
     <div class="body">
         <div class="img-border"><img src="pps/Agnieszka.png" class="img"><p class="imgtxt">Agniezska</p></div>
@@ -56,7 +57,7 @@
         <div class="img-border"><img src="pps/Constantine.png" class="img"><p class="imgtxt">Constantine</p></div>
         <div class="img-border"><img src="pps/David.png" class="img"><p class="imgtxt">David_Akaboba</p></div>
         <div class="img-border"><img src="pps/Emmanuel.png" class="img"><p class="imgtxt">Emmanuel</p></div>
-        
+        <!--New status updates of friends-->
         <div class="bodyinner">
         <div class="icon">
             <div><img src="pps/fahad image.jpg" class="icon-img"></div>
@@ -254,7 +255,7 @@ Add a comment...
 </div>  
 </div>
 </section>
-
+<!-- This section includes friend suggestions in the right section-->
 <section class="rightsec">
 <div class="right">
         <div class="right1 centr1"><img src="icons/profile1.jpg.png" class="img-right"><p class="imgtxt-right"><strong>niveditha_rejin</strong><br>
@@ -276,7 +277,7 @@ Add a comment...
         <span class="wk">Suggested for you</span><span class="follow">Follow</span></p></div>
         <!--
         <div class="img-border"><img src="pps/Ivan.png" class="img"></div>-->
-
+        <!--right section footer-->
         <div class="right-footer">
         About . Help. Press . API . Jobs . Privacy . Terms .<br>
         Locations . Language . Meta Verified<br><br>
